# agents-practice

./: .gitignore  docker-compose.yml  langgraph.json  pyproject.toml  respuesta.json
notebook/: 01-agent_graph.ipynb  02-simple_memory.ipynb  03-messages.ipynb  04-prompt_chaining.ipynb  05-structured_output.ipynb  06_prompting.ipynb  07-ReAct.ipynb  08-conditions.ipynb  09-parallization.ipynb  10-orchestrator.ipynb  notebook.ipynb
src/agents/: code_review.py  evaluator.py  main.py  memory_messages.py  orchestrator.py  simple_memory.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py
src/api/: main.py
