[project]
name = "agents-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi[standard]>=0.138.1",
    "jinja2>=3.1.6",
    "langchain-deepseek>=1.1.0",
    "langchain[google-genai,openai]>=1.3.11",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.3.0",
    "langgraph-cli[inmem]>=0.4.30",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
